--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,27 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div id="fb-root"></div>
+    <script>
+    window.fbAsyncInit = function() {
+  window.FB.init({
+    appId: "312658112474450",
+    autoLogAppEvents: true,
+    xfbml: true,
+    version: "v0.1"
+  });
+};
+(function(d, s, id) {
+  var js,
+    fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s);
+  js.id = id;
+  js.src =
+    "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=312658112474450&autoLogAppEvents=1";
+  fjs.parentNode.insertBefore(js, fjs);
+})(document, "script", "facebook-jssdk");
+</script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
