--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href='./index.css'>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,40 +23,37 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="fb-root"></div>
-    <script>
-    window.fbAsyncInit = function() {
-  window.FB.init({
-    appId: "312658112474450",
-    autoLogAppEvents: true,
-    xfbml: true,
-    version: "v0.1"
-  });
-};
-(function(d, s, id) {
-  var js,
-    fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s);
-  js.id = id;
-  js.src =
-    "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=312658112474450&autoLogAppEvents=1";
-  fjs.parentNode.insertBefore(js, fjs);
-})(document, "script", "facebook-jssdk");
-</script>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      <noscript>
+        You need to enable JavaScript to run this app.
+      </noscript>
+      <div id="fb-root"></div>
+      <script>
+      window.fbAsyncInit = function() {
+    window.FB.init({
+      appId: "312658112474450",
+      autoLogAppEvents: true,
+      xfbml: true,
+      version: "v0.1"
+    });
+  };
+  (function(d, s, id) {
+    var js,
+      fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s);
+    js.id = id;
+    js.src =
+      "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=312658112474450&autoLogAppEvents=1";
+    fjs.parentNode.insertBefore(js, fjs);
+  })(document, "script", "facebook-jssdk");
+  </script>
+      <div id="root"></div>
+      <!--
+        You can add webfonts, meta tags, or analytics to this file.
+        The build step will place the bundled scripts into the <body> tag.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+        To begin the development, run `npm start` or `yarn start`.
+        To create a production bundle, use `npm run build` or `yarn build`.
+      -->
   </body>
 </html>
