Add Country Show components

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <div id="fb-root"></div>
       <script>
       const appId =
-        process.env.NODE_ENV !== "production"
+        location.hostname === "localhost"
           ? "196365761124034"
           : "312658112474450"
 
